--- a/browser/js/authorized/dashboard/teacher.html
+++ b/browser/js/authorized/dashboard/teacher.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="outlined clearfix graph no-top-border">
                         <ul class="class-list">
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
+                            <li ng-repeat="class in userClasses"><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
                             <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
                             <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
                         </ul>
@@ -195,7 +195,7 @@
             <!-- </div> -->
             <div class="row">
                 <!-- Recent Activity -->
-                <div class="col-md-12 mar-btm-30 recent-activity">
+<!--                 <div class="col-md-12 mar-btm-30 recent-activity">
                     <div class="outlined clearfix pad-20">
                         <div class="title-box float-lt">
                             <span class="main-title">Recent Activity</span>
@@ -207,7 +207,7 @@
                             <li>
                                 <span class="pro-img-list">
               <img src="img/a1.jpg" title="User" alt="User" />
-            </span>
+                </span>
                                 <span class="activity-title">Can someone help with Fractions?<br>  
               <span class="desc-det">
                 <span class="desc-lbl">Topic:</span> Fractions
@@ -219,7 +219,7 @@
                             <li>
                                 <span class="pro-img-list">
               <img src="img/a1.jpg" title="User" alt="User" />
-            </span>
+                </span>
                                 <span class="activity-title">Can someone help with Fractions?<br>  
               <span class="desc-det">
                 <span class="desc-lbl">Topic:</span> Fractions
@@ -231,7 +231,7 @@
                             <li>
                                 <span class="pro-img-list">
               <img src="img/a1.jpg" title="User" alt="User" />
-            </span>
+                </span>
                                 <span class="activity-title">Can someone help with Fractions?<br>  
               <span class="desc-det">
                 <span class="desc-lbl">Topic:</span> Fractions
@@ -245,7 +245,7 @@
                     <div class="outlined clearfix pad-20 no-top-border">
                         <a href="" class="fill-btn float-rt">View All</a>
                     </div>
-                </div>
+                </div> -->
                 <!-- / Recent Activity -->
             </div>
         </div>
