--- a/browser/js/unauthorized/about/about.html
+++ b/browser/js/unauthorized/about/about.html
@@ -1,3 +1,4 @@
+<div class="about-us">
 <div id="inner-banner" class="inner-page-head">
     <div class="item active">
         <div class="container">
@@ -150,3 +151,4 @@
     </div>
     </div>
 </section>  
+</div>
