--- a/browser/js/unauthorized/courseDetails/courseDetails.html
+++ b/browser/js/unauthorized/courseDetails/courseDetails.html
@@ -1,4 +1,5 @@
-<div id="inner-banner" class="inner-page-head coure-head">
+<div class="gray-bg">
+    <div id="inner-banner" class="inner-page-head coure-head">
     <div class="item active">
         <div class="container">
             <h1>All Courses</h1>
@@ -302,3 +303,4 @@
         </div>
     </div>
 </section>
+</div>
