--- a/browser/js/unauthorized/teacherList/teacherList.html
+++ b/browser/js/unauthorized/teacherList/teacherList.html
@@ -1,4 +1,5 @@
-<div id="inner-banner" class="inner-page-head">
+<div class="our-teachers">
+    <div id="inner-banner" class="inner-page-head">
     <div class="item active">
         <div class="container">
             <h1>Our Teachers</h1>
@@ -191,3 +192,5 @@
     </div>
 </section>
 <!--Join Today End-->
+
+</div>
