--- a/browser/js/unauthorized/cart/cart.html
+++ b/browser/js/unauthorized/cart/cart.html
@@ -1,4 +1,5 @@
-<div id="inner-banner" class="inner-page-head">
+<div class="shopping-cart">
+    <div id="inner-banner" class="inner-page-head">
     <div class="item active">
         <div class="container">
             <h1>Shopping Cart</h1>
@@ -77,3 +78,4 @@
     </div>
 </section>
 <!--shopping cart end-->
+</div>
