--- a/browser/js/unauthorized/contact/contact.html
+++ b/browser/js/unauthorized/contact/contact.html
@@ -1,4 +1,5 @@
-<div id="inner-banner" class="inner-page-head">
+<div class="contact-us">
+    <div id="inner-banner" class="inner-page-head">
     <div class="item active">
         <div class="container">
             <h1>Contact Us</h1>
@@ -90,3 +91,4 @@
     </div>
 </section>
 <!-- Page Content End -->
+</div>
