--- a/browser/js/common/modals/login/login.html
+++ b/browser/js/common/modals/login/login.html
@@ -3,6 +3,7 @@
     <div class="modal-header">
         <button type="button" class="close" ng-click="close(false)" aria-hidden="true">&times;</button>
         <h4 class="modal-title">Login</h4>
+        <h4 class="erorr" ng-show="authError">{{authError}}</h4>
         <span class="login-instruction">Please Login to View your Account</span>
     </div>
     <div class="modal-body">
