--- a/browser/js/authorized/teachers/newClassroom/newClassroom.html
+++ b/browser/js/authorized/teachers/newClassroom/newClassroom.html
@@ -88,12 +88,13 @@
                                                 <div class="form-group select-field">
                                                     <label class="col-sm-2 control-label">Category </label>
                                                     <div class="col-sm-4">
-                                                        <select name="carlist" form="carform" class="form-control" ng-model="newClassroom.subject">
+                                                        <input ng-model = "newClassroom.subject"/>
+                                                        <!-- <select name="carlist" form="carform" class="form-control" ng-model="newClassroom.subject">
                                                             <option selected="selected" value="Mathematics">Mathematics</option>
                                                             <option value="English">English</option>
                                                             <option value="Science">Science</option>
                                                             <option value="History">History</option>
-                                                        </select>
+                                                        </select> -->
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
