--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -90,8 +90,8 @@
                                     <div class="innercont clearfix m-b-10a">
                                         <a href="" class="thumb-lg pull-left m-r"><img src="img/a8.jpg" class="img-circle"></a>
                                         <div class="instructor-info reltd-title">
-                                            <div class="trname">{{classroom.teacher}}</div>
-                                            <div class="trexp">Mathematics Genius</div>
+                                            <div class="trname">{{classroom.teacher_name}}</div>
+                                            <div class="trexp">{{classroom.teacher_title}}</div>
                                             <div class="trsocial">
                                                 <a href="" target="_blank" class="red-text"><i class="fa fa-envelope"></i></a>
                                             </div>
@@ -201,7 +201,7 @@
             <li>
                 <a class="light-text active">
                     <span class="pull-left thumb-sm avatar m-l-n-md"><img src="img/a8.jpg" class="img-circle" alt="user"></span>
-                    <span class="activity-title pad-12 p-r-0">Adam Grant</span>
+                    <span class="activity-title pad-12 p-r-0">{{classroom.teacher}}</span>
                 </a>
             </li>
         </ul>
