--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -195,13 +195,13 @@
         <div class="online-tit pad-20 light-text">ONLINE</div>
         <div class="teacher-ct text-center">
             <span class="thumb-lg m-b-10a"><img src="img/a8.jpg" class="img-circle"></span>
-            <div class="secondery-title">{{classroom.teacher}}</div>
+            <div class="secondery-title">{{user.name}}</div>
         </div>
         <ul class="online-stud-list">
             <li>
                 <a class="light-text active">
                     <span class="pull-left thumb-sm avatar m-l-n-md"><img src="img/a8.jpg" class="img-circle" alt="user"></span>
-                    <span class="activity-title pad-12 p-r-0">{{classroom.teacher}}</span>
+                    <span class="activity-title pad-12 p-r-0">{{classroom.teacher_name}}</span>
                 </a>
             </li>
         </ul>
