--- a/browser/js/authorized/teachers/aside.html
+++ b/browser/js/authorized/teachers/aside.html
@@ -47,7 +47,7 @@
       <span class="font-bold">My Courses</span>
     </a>
     <ul class="nav nav-sub dk">
-      <li ui-sref-active="active">
+      <!-- <li ui-sref-active="active">
         <a ui-sref="app.dashboard">
           <span>Upcoming Classes</span>
         </a>
@@ -56,13 +56,13 @@
         <a ui-sref="app.dashboard">
           <span>Assignments Due</span>
         </a>
-      </li>
+      </li> -->
       <li ui-sref-active="active">
         <a ui-sref="quizDashboard">
           <span>Quiz Manager</span>
         </a>
       </li>
-      <li ui-sref-active="active">
+      <!-- <li ui-sref-active="active">
         <a ui-sref="app.dashboard">
           <span>Course Forum</span>
         </a>
@@ -71,7 +71,7 @@
         <a ui-sref="app.dashboard">
           <span>Course Forum Thread</span>
         </a>
-      </li>
+      </li> -->
       <li ui-sref-active="active">
         <a ui-sref="newClassroom">
           <span>Create Course</span>
@@ -80,7 +80,7 @@
     </ul>
   </li>
 
-  <li>
+<!--   <li>
     <a ui-sref="app.dashboard">
      <span class="nav-img"><img src="img/nav-calendar.png"/></span>
       <span class="font-bold" translate="aside.nav.CALENDAR">Forum</span>
@@ -120,9 +120,9 @@
         </a>
       </li>
     </ul>
-  </li>
+  </li> -->
 
-
+<!-- 
   <li>
     <a href class="auto">      
     <span class="nav-img"><img src="img/nav-report.png"/></span>
@@ -145,9 +145,9 @@
       </li>
     </ul>
   </li>
-
+ -->
   <li>
-    <a ui-sref="app.dashboard">
+    <a ng-click="logout()">
       <span class="nav-img"><img src="img/nav-logout.png"/></span>
       <span class="font-bold" translate="Logout">Logout</span>
     </a>
