--- a/browser/js/authorized/dashboard/teacher.html
+++ b/browser/js/authorized/dashboard/teacher.html
@@ -154,16 +154,12 @@
                     </div>
                     <div class="outlined clearfix graph no-top-border">
                         <ul class="class-list">
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="90%"><span class="pregress-bar" style="width: 90%"></span></span>
-                            </li>
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="60%"><span class="pregress-bar" style="width: 60%"></span></span>
-                            </li>
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="80%"><span class="pregress-bar" style="width: 80%"></span></span>
+                            <li><span class="class-title">{{class.title}}</span> <span class="cource-progress"><span class="pregress-bar" style="width: 100%"></span></span>
                             </li>
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="outlined-btn red-btn float-rt">Create Course </a><a href="" class="fill-btn float-rt">View All</a>
+                        <a ui-sref="newClassroom" class="outlined-btn red-btn float-rt">Create Course </a><a href="" class="fill-btn float-rt">View All</a>
                     </div>
                 </div>
                 <!-- / Courses -->
