--- a/browser/js/authorized/dashboard/student.html
+++ b/browser/js/authorized/dashboard/student.html
@@ -10,64 +10,46 @@
         </div>
         <!-- / main header -->
         <div class="wrapper-md">
-            <!-- info bar -->
-            <div class="row mar-btm-30">
-                <div class="col-md-12">
-                    <div class="outlined pad-20 info-bar clearfix">
-                        <div class="icon-cc"><span><img src="img/st-assignment.jpg" alt="CC" title="CC" /></span></div>
-                        <div class="info-wrap"><span class="info-text">Your next assignment is due on <strong>March 31, 2017</strong></span></div>
-                        <div class="info-btn"><a href="" class="fill-btn">View All</a></div>
-                    </div>
-                </div>
-            </div>
             <!-- / info bar -->
             <div class="row">
+                <!-- Earnings this month -->
+<!--                 <div class="col-md-6 mar-btm-30">
+                    <div class="outlined clearfix pad-20">
+                        <div class="title-box float-lt">
+                            <span class="main-title">Earnings</span>
+                            <span class="reltd-title">This Month</span>
+                        </div>
+                        <a href="" class="outlined-btn gray-btn float-rt">REPORTS</a>
+                    </div>
+                    <div class="outlined clearfix pad-20 no-pad-top graph no-top-border">
+                        <div class="panel-body">
+                            <div ui-jq="plot" ui-options="
+          [
+            { data: [ [1,30],[5,50],[10,40],[15,80],[17,40],[18,70],[22,35],[26,60],[28,45],[30,80] ], label: 'Gross Revenue', points: { show: true }, lines: { show: true, fill: false} }, 
+            { data: [ [1,20],[5,43],[10,25],[15,64],[17,37],[18,60],[22,20],[26,50],[28,30],[30,65] ], label: 'Gross Revenue', points: { show: true }, lines: { show: true, fill: false} }
+          ],
+          {
+            colors: [ '#ea605e','#89c541' ],
+            series: { shadowSize: 0 },
+            xaxis:{ font: { color: '#ccc' } },
+            yaxis:{ font: { color: '#ccc' } },
+            grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
+            tooltip: true,
+            tooltipOpts: { content: '%s of Date %x is %yk',  defaultTheme: false, shifts: { x: 0, y: 20 } }
+          }
+        " style="height:147px"></div>
+                        </div>
+                    </div>
+                    <div class="outlined clearfix pad-20 no-top-border">
+                        <div class="row">
+                            <div class="col-md-6 col-xs-6 text-center rev-stat"><strong>Gross Revenue</strong><span class="graph-value red-text">80.20k</span></div>
+                            <div class="col-md-6 col-xs-6 text-center rev-stat"><strong>Net Revenue</strong><span class="graph-value geen-text">45k</span></div>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- / Earnings this month -->
                 <!-- Upcoming Classes -->
-                <div class="col-md-6 mar-btm-30 upcoming-classes">
-                    <div class="outlined clearfix pad-20">
-                        <div class="title-box float-lt">
-                            <span class="main-title">Upcoming Classes</span>
-                            <span class="reltd-title">Your upcoming classes for the day</span>
-                        </div>
-                    </div>
-                    <div class="outlined clearfix graph no-top-border">
-                        <ul class="class-list">
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
-                        </ul>
-                    </div>
-                    <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="fill-btn float-rt">View All</a>
-                    </div>
-                </div>
-                <!-- / Upcoming Classes -->
-                <!-- Courses -->
-                <div class="col-md-6 mar-btm-30 courses">
-                    <div class="outlined clearfix pad-20">
-                        <div class="title-box float-lt">
-                            <span class="main-title">Courses</span>
-                            <span class="reltd-title">Your current courses</span>
-                        </div>
-                    </div>
-                    <div class="outlined clearfix graph no-top-border">
-                        <ul class="class-list">
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="90%"><span class="pregress-bar" style="width: 90%"></span></span>
-                            </li>
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="60%"><span class="pregress-bar" style="width: 60%"></span></span>
-                            </li>
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="80%"><span class="pregress-bar" style="width: 80%"></span></span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="fill-btn float-rt">View All</a>
-                    </div>
-                </div>
-                <!-- / Courses -->
-            </div>
-            <div class="row">
-                <!-- Calender -->
+                                <!-- Calender -->
                 <div class="col-md-6 mar-btm-30">
                     <div class="outlined clearfix">
                         <div id="calendar"></div>
@@ -100,26 +82,23 @@
                 });
                 </script>
                 <!-- / Calender -->
-                <!-- Assignment Due -->
-                <div class="col-md-6 mar-btm-30 assignment-due">
+                <div class="col-md-6 mar-btm-30 upcoming-classes">
                     <div class="outlined clearfix pad-20">
                         <div class="title-box float-lt">
-                            <span class="main-title">Assignment Due (3)</span>
-                            <span class="reltd-title">Your upcoming classes for the day</span>
+                            <span class="main-title">Upcoming Classes</span>
+                            <span class="reltd-title">Your upcoming classes for the Week</span>
                         </div>
                     </div>
                     <div class="outlined clearfix graph no-top-border">
                         <ul class="class-list">
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">Wed. Jan 20, 2017</span></li>
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">Wed. Jan 20, 2017</span></li>
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">Wed. Jan 20, 2017</span></li>
+                            <li ng-repeat="class in classrooms"><span class="class-title"><a ng-click="transition(class.id)">{{class.title}}</a></span> <span class="class-time" ng-repeat="(key,value) in class.times">{{weekdays[key]}}: {{value.start | date:'HH:MM'}} - {{value.end | date:'HH:MM'}}</span></li>
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
                         <a href="" class="fill-btn float-rt">View All</a>
                     </div>
                 </div>
-                <!-- / Assignment Due -->
+                <!-- / Upcoming Classes -->
             </div>
             <div class="row">
                 <!-- Recent Activity -->
@@ -169,8 +148,52 @@
                     </div>
                 </div>
                 <!-- / Recent Activity -->
+                <!-- Courses -->
+                <div class="col-md-6 mar-btm-30 courses">
+                    <div class="outlined clearfix pad-20">
+                        <div class="title-box float-lt">
+                            <span class="main-title">Courses</span>
+                            <span class="reltd-title">Your current courses</span>
+                        </div>
+                    </div>
+                    <div class="outlined clearfix graph no-top-border">
+                        <ul class="class-list">
+                            <li><span class="class-title">{{class.title}}</span> <span class="cource-progress"><span class="pregress-bar" style="width: 100%"></span></span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="outlined clearfix pad-20 no-top-border">
+                        <a ui-sref="classSearch" class="outlined-btn red-btn float-rt">Sign up for new Classes</a>
+                    </div>
+                </div>
+                <!-- / Courses -->
+            </div>
+            <!-- <div class="row"> -->
+
+                <!-- Assignment Due -->
+<!--                 <div class="col-md-6 mar-btm-30 assignment-due">
+                    <div class="outlined clearfix pad-20">
+                        <div class="title-box float-lt">
+                            <span class="main-title">Assignment Due (3)</span>
+                            <span class="reltd-title">Your upcoming classes for the day</span>
+                        </div>
+                    </div>
+                    <div class="outlined clearfix graph no-top-border">
+                        <ul class="class-list">
+                            <li><span class="class-title">Fractions 101</span> <span class="class-time">Wed. Jan 20, 2017</span></li>
+                            <li><span class="class-title">Fractions 101</span> <span class="class-time">Wed. Jan 20, 2017</span></li>
+                            <li><span class="class-title">Fractions 101</span> <span class="class-time">Wed. Jan 20, 2017</span></li>
+                        </ul>
+                    </div>
+                    <div class="outlined clearfix pad-20 no-top-border">
+                        <a href="" class="fill-btn float-rt">View All</a>
+                    </div>
+                </div> -->
+                <!-- / Assignment Due -->
+            <!-- </div> -->
+            <div class="row">
                 <!-- Recent Activity -->
-                <div class="col-md-6 mar-btm-30 recent-activity">
+<!--                 <div class="col-md-12 mar-btm-30 recent-activity">
                     <div class="outlined clearfix pad-20">
                         <div class="title-box float-lt">
                             <span class="main-title">Recent Activity</span>
@@ -182,7 +205,7 @@
                             <li>
                                 <span class="pro-img-list">
               <img src="img/a1.jpg" title="User" alt="User" />
-            </span>
+                </span>
                                 <span class="activity-title">Can someone help with Fractions?<br>  
               <span class="desc-det">
                 <span class="desc-lbl">Topic:</span> Fractions
@@ -194,7 +217,7 @@
                             <li>
                                 <span class="pro-img-list">
               <img src="img/a1.jpg" title="User" alt="User" />
-            </span>
+                </span>
                                 <span class="activity-title">Can someone help with Fractions?<br>  
               <span class="desc-det">
                 <span class="desc-lbl">Topic:</span> Fractions
@@ -206,7 +229,7 @@
                             <li>
                                 <span class="pro-img-list">
               <img src="img/a1.jpg" title="User" alt="User" />
-            </span>
+                </span>
                                 <span class="activity-title">Can someone help with Fractions?<br>  
               <span class="desc-det">
                 <span class="desc-lbl">Topic:</span> Fractions
@@ -220,7 +243,7 @@
                     <div class="outlined clearfix pad-20 no-top-border">
                         <a href="" class="fill-btn float-rt">View All</a>
                     </div>
-                </div>
+                </div> -->
                 <!-- / Recent Activity -->
             </div>
         </div>
