--- a/browser/js/authorized/students/aside.html
+++ b/browser/js/authorized/students/aside.html
@@ -1,68 +1,68 @@
 <!-- list -->
 <ul class="nav edv-nav">
-    <li>
-        <a href class="auto">
-            <span class="nav-img"><img src="img/nav-profile.png"/></span>
-            <span class="pull-right text-muted">
+  <li>
+    <a class="auto" toggle-parent-class="active">      
+    <span class="nav-img"><img src="img/nav-profile.png"/></span>
+      <span class="pull-right text-muted">
         <i class="fa fa-fw fa-plus text"></i>
         <i class="fa fa-fw fa-minus text-active"></i>
       </span>
-            <span class="font-bold">Profile</span>
-        </a>
-        <ul class="nav nav-sub dk">
-            <li class="user-thum-lg" ui-sref-active="active">
-                <span class="dropdown wrapper">
+      <span class="font-bold">Profile</span>
+    </a>
+    <ul class="nav nav-sub dk">
+      <li ui-sref="profile" class="user-thum-lg" ui-sref-active="active">
+        <span class="dropdown wrapper" >
         <span class="no-border">
           <span class="thumb-lg w-auto-folded avatar m-t-sm">
-            <img src="img/a0.jpg" class="img-full" alt="...">
+            <img src="https://edvances.blob.core.windows.net/profile-pictures/{{user.profilePic}}" class="img-full" alt="...">
           </span>
-                </span>
-                <span href class="dropdown-toggle hidden-folded no-border" dropdown-toggle>
+        </span>
+        <span href class="dropdown-toggle hidden-folded no-border" dropdown-toggle>
           <span class="clear">
-            <span class="block user-pro-name">Student Name</span>
-                </span>
-                </span>
-                </span>
-            </li>
-            <li ui-sref-active="active">
-                <a ui-sref="app.profile" class="editpro">
-                    <span>Edit Profile</span>
-                </a>
-            </li>
-        </ul>
-    </li>
+            <span class="block user-pro-name">{{user.name}}</span>
+          </span>
+        </span>
+      </span>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="edit" class="editpro">
+          <span>Edit Profile</span>
+        </a>
+      </li>
+    </ul>
+  </li>
     <li ui-sref-active="active" class="active">
-        <a ui-sref="app.dashboard">
+        <a ui-sref="dashboard">
             <span class="nav-img"><img src="img/nav-dashboard.png"/></span>
             <span class="font-bold" translate="aside.nav.DASHBOARD">Dashboard</span>
         </a>
     </li>
     <li>
-        <a class="auto" ui-sref="app.classroom">
+        <a class="auto" toggle-parent-class="active">
             <span class="nav-img"><img src="img/nav-course.png"/></span>
             <span class="pull-right text-muted">
         <i class="fa fa-fw fa-plus text"></i>
         <i class="fa fa-fw fa-minus text-active"></i>
       </span>
-            <span class="font-bold">My Cource</span>
+            <span class="font-bold">My Courses</span>
         </a>
         <ul class="nav nav-sub dk">
-            <li ui-sref-active="active">
+<!--             <li ui-sref-active="active">
                 <a>
                     <span>Upcoming Classes</span>
                 </a>
-            </li>
-            <li ui-sref-active="active">
+            </li> -->
+           <!--  <li ui-sref-active="active">
                 <a>
                     <span>Assignments Due</span>
                 </a>
-            </li>
+            </li> -->
             <li ui-sref-active="active">
                 <a ui-sref="app.quizmanager">
                     <span>My Quizzes</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+           <!--  <li ui-sref-active="active">
                 <a>
                     <span>Course Forum</span>
                 </a>
@@ -71,15 +71,15 @@
                 <a>
                     <span>Course Forum Thread</span>
                 </a>
-            </li>
-            <li ui-sref-active="active">
+            </li> -->
+            <!-- <li ui-sref-active="active">
                 <a ui-sref="app.createcourses">
                     <span>Course Sign-up</span>
                 </a>
-            </li>
+            </li> -->
         </ul>
     </li>
-    <li>
+    <!-- <li>
         <a>
             <span class="nav-img"><img src="img/nav-calendar.png"/></span>
             <span class="font-bold" translate="aside.nav.CALENDAR">Calendar</span>
@@ -117,8 +117,8 @@
                 </a>
             </li>
         </ul>
-    </li>
-    <li>
+    </li> -->
+    <!-- <li>
         <a class="auto">
             <span class="nav-img"><img src="img/nav-report.png"/></span>
             <span class="pull-right text-muted">
@@ -139,9 +139,9 @@
                 </a>
             </li>
         </ul>
-    </li>
+    </li> -->
     <li>
-        <a>
+        <a ng-click="logout()">
             <span class="nav-img"><img src="img/nav-logout.png"/></span>
             <span class="font-bold" translate="Logout">Logout</span>
         </a>
