--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -34,10 +34,13 @@
                         <!--Video Stream end-->
                         <div class="no-top-border outlined clearfix courseclock pad-20">
                             <div class="timeperiods"><span ng-repeat="(key,value) in classroom.class_times"><span>{{weekdays[key]}} from {{value.start | date:'HH:mm'}} - {{value.end | date:'HH:mm'}}</span></div>
-                            <div class="float-rt joincls">
+                            <div class="float-rt joincls" ng-if="member">
                                 <a ng-click="test()" ng-hide="joined" class="outlined-btn red-btn v-a-m">Join Class</a>
                                 <a ng-click="close()" ng-show="joined" class="outlined-btn red-btn v-a-m">Leave Class</a>
                                 <a href="" class="user-chat v-a-m"><img src="img/user-chat.jpg" alt="user chat" /></a>
+                            </div>
+                            <div class="float-rit joincls" ng-if="!member">
+                                <a ng-click="addStudent(user.id)" class="outlined-btn red-btn v-a-m">Purchase Class</a>
                             </div>
                         </div>
                         
