--- a/browser/js/authorized/dashboard/student.html
+++ b/browser/js/authorized/dashboard/student.html
@@ -158,7 +158,7 @@
                     </div>
                     <div class="outlined clearfix graph no-top-border">
                         <ul class="class-list">
-                            <li><span class="class-title">{{class.title}}</span> <span class="cource-progress"><span class="pregress-bar" style="width: 100%"></span></span>
+                            <li ng-repeat="class in classrooms"><span class="class-title">{{class.title}}</span> <span class="cource-progress"><span class="pregress-bar" style="width: 100%"></span></span>
                             </li>
                         </ul>
                     </div>
