--- a/browser/js/authorized/students/aside.html
+++ b/browser/js/authorized/students/aside.html
@@ -72,11 +72,11 @@
                     <span>Course Forum Thread</span>
                 </a>
             </li> -->
-            <!-- <li ui-sref-active="active">
-                <a ui-sref="app.createcourses">
+            <li ui-sref-active="active">
+                <a ui-sref="search">
                     <span>Course Sign-up</span>
                 </a>
-            </li> -->
+            </li>
         </ul>
     </li>
     <!-- <li>
