--- a/browser/js/authorized/dashboard/teacher.html
+++ b/browser/js/authorized/dashboard/teacher.html
@@ -95,7 +95,7 @@
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="fill-btn float-rt">View All</a>
+                        <a href="" class="outlined-btn gray-btn float-rt">View All</a>
                     </div>
                 </div>
                 <!-- / Upcoming Classes -->
@@ -159,7 +159,7 @@
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
-                        <a ui-sref="newClassroom" class="outlined-btn red-btn float-rt">Create Course </a><a href="" class="fill-btn float-rt">View All</a>
+                        <a href="" class="outlined-btn gray-btn float-rt">View All</a> <a ui-sref="newClassroom" class="btn red-btn float-rt">Create Course </a>
                     </div>
                 </div>
                 <!-- / Courses -->
