--- a/browser/js/authorized/dashboard/student.html
+++ b/browser/js/authorized/dashboard/student.html
@@ -91,11 +91,12 @@
                     </div>
                     <div class="outlined clearfix graph no-top-border">
                         <ul class="class-list">
-                            <li ng-repeat="class in classrooms"><span class="class-title"><a ng-click="transition(class.id)">{{class.title}}</a></span> <span class="class-time" ng-repeat="(key,value) in class.times">{{weekdays[key]}}: {{value.start | date:'HH:MM'}} - {{value.end | date:'HH:MM'}}</span></li>
+                            <li ng-repeat="class in classrooms"><span class="class-title"><a ng-click="transition(class.id)">{{class.title}}</a></span> 
+                            <br><span class="class-time" ng-repeat="(key,value) in class.times">{{weekdays[key]}}: {{value.start | date:'HH:MM'}} - {{value.end | date:'HH:MM'}}</span></li>
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="fill-btn float-rt">View All</a>
+                        <a href="" class="outlined-btn gray-btn float-rt">View All</a>
                     </div>
                 </div>
                 <!-- / Upcoming Classes -->
@@ -144,7 +145,7 @@
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="fill-btn float-rt">View All</a>
+                        <a href="" class="outlined-btn gray-btn float-rt">View All</a>
                     </div>
                 </div>
                 <!-- / Recent Activity -->
