--- a/browser/js/authorized/profile/profile.html
+++ b/browser/js/authorized/profile/profile.html
@@ -2,5 +2,6 @@
 <div class="breadcrumbs container">
     <a href="index.html">Home</a> <i class="fa fa-angle-right"></i> <a class="current">{{user.name}}</a>
 </div>
+<button ng-click="addCredits()">test</button>
 <!-- /.search-section -->
 <ng-include src="templateUrl()"></ng-include>
