--- a/browser/js/authorized/dashboard/teacher.html
+++ b/browser/js/authorized/dashboard/teacher.html
@@ -11,6 +11,15 @@
         <!-- / main header -->
         <div class="wrapper-md">
             <!-- / info bar -->
+            <div class="row mar-btm-30">
+                <div class="col-md-12">
+                    <div class="outlined pad-20 info-bar clearfix gray-bg left-bar">
+                        <div class="icon-cc"><span><img src="img/credit-card.png" alt="CC" title="CC" /></span></div>
+                        <div class="info-wrap"><span class="info-text">Your subscription ends on <strong>March 31, 2017</strong></span></div>
+                        <div class="info-btn"><a href="" class="fill-btn">Upgrade</a></div>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <!-- Earnings this month -->
 <!--                 <div class="col-md-6 mar-btm-30">
