--- a/browser/js/authorized/students/aside.html
+++ b/browser/js/authorized/students/aside.html
@@ -21,12 +21,20 @@
           <span class="clear">
             <span class="block user-pro-name">{{user.name}}</span>
           </span>
+          <span class="clear">
+            <span class="block user-pro-name">{{user.credits}}</span>
+          </span>
         </span>
       </span>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="edit" class="editpro">
           <span>Edit Profile</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="checkout" class="editpro">
+          <span>Add Credits</span>
         </a>
       </li>
     </ul>
