--- a/browser/js/authorized/teachers/quizDashboard/quizDashboard.html
+++ b/browser/js/authorized/teachers/quizDashboard/quizDashboard.html
@@ -59,7 +59,7 @@
                         <div class="states">
                             <span class="desc-det p-r-10"><i class="fa fa-question-circle"></i> {{quiz.questions.length}} Q</span>
                             <span class="desc-det p-r-10"><i class="fa fa-clock-o"></i> {{quiz.timeframe}}</span>
-                            <span class="desc-det"><i class="fa  fa-thumbs-up"></i> 25 pts</span>
+                            <span class="desc-det"><i class="fa  fa-thumbs-up"></i>{{quiz.pointValue || 0}} pts</span>
                         </div>
                     </div>
                     <div class="outlined pad-10 clearfix no-top-border">
