--- a/browser/js/authorized/teachers/quizDashboard/newQuiz.html
+++ b/browser/js/authorized/teachers/quizDashboard/newQuiz.html
@@ -78,12 +78,12 @@
                                                 <label class="col-sm-2 control-label">Timeframe</label>
                                                 <div class="col-sm-10">
                                                     <label class="i-switch i-switch-lg bg-dark m-t-xs m-r">
-                                                        <input type="checkbox" ng-model="newQuiz.timeframe">
+                                                        <input type="checkbox" ng-model="timeframe">
                                                         <i></i>
                                                     </label>
                                                 </div>
                                             </div>
-                                            <div class="form-group">
+<!--                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Point Value</label>
                                                 <div class="col-sm-10">
                                                     <label class="i-switch i-switch-lg bg-dark m-t-xs m-r">
@@ -91,7 +91,7 @@
                                                         <i></i>
                                                     </label>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div class="form-group select-field m-b-30" ng-show="timeframe">
                                                 <label class="col-sm-2 control-label hide-767"></label>
                                                 <div class="col-sm-8">
