--- a/browser/js/common/modals/signup/signup.html
+++ b/browser/js/common/modals/signup/signup.html
@@ -7,7 +7,8 @@
     </div>
     <div class="modal-body">
         <h3 ng-if="authError">{{authError}}</h3>
-            <input type="text" name="Name" class="login-signup" ng-model="user.name" placeholder="Name" required/>
+            <input type="text" name="Name" class="login-signup" ng-model="user.firstName" placeholder="First Name" required/>
+            <input type="text" name="Name" class="login-signup" ng-model="user.lastName" placeholder="Last Name" required/>
             <input type="text" name="email" class="login-signup" ng-model="user.email" placeholder="Email" required/>
             <input type="Password" name="Password" class="login-signup" ng-model="user.password" placeholder="Password" required>
             <input type="Password" name="Confirm Password" class="login-signup" placeholder="Confirm Password" ng-model="user.confirm" compare-to="user.password" required/>
